--- a/app/src/main/res/layout/feeling_recycler_item.xml
+++ b/app/src/main/res/layout/feeling_recycler_item.xml
@@ -3,22 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingLeft="25dp">
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/carattere_regular"
+        android:text="Calm"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <LinearLayout
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:background="@color/black">
+        android:id="@+id/linearLayout"
+        android:layout_width="62dp"
+        android:layout_height="65dp"
+        android:background="@drawable/feelings_background"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="62dp"
-            android:layout_height="62dp"
+            android:id="@+id/imageView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:background="@drawable/feelings_background"
-            app:srcCompat="@drawable/ic_vector3" />
-
+            app:srcCompat="@drawable/ic_calm___icon" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
