--- a/app/src/main/res/layout/state_recycler_item.xml
+++ b/app/src/main/res/layout/state_recycler_item.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="340dp"
+    android:layout_height="170dp"
+    android:layout_marginBottom="26dp"
+    android:background="@drawable/state_background"
     android:scrollbarSize="15sp">
 
     <TextView
@@ -31,9 +33,9 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
+        android:layout_width="168dp"
+        android:layout_height="111dp"
+        android:layout_marginStart="175dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="77dp"
         app:layout_constraintEnd_toEndOf="parent"
