--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="backGround">#B76D7677</color>
+    <color name="backGround">#253334</color>
     <color name="buttom">#253334</color>
+    <color name="white70">#B3FFFFFF</color>
 </resources>
