--- a/app/src/main/res/layout/activity_screen2.xml
+++ b/app/src/main/res/layout/activity_screen2.xml
@@ -15,6 +15,8 @@
         android:background="@color/backGround"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav_menu" />
 
     <fragment
