--- a/app/src/main/res/layout/feeling_recycler_item.xml
+++ b/app/src/main/res/layout/feeling_recycler_item.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="25dp">
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/feelings_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/carattere_regular"
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView6"
+            android:id="@+id/feelings_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
