--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,7 +43,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="99dp"
         android:layout_marginEnd="18dp"
-        android:fontFamily="@font/alegra_font"
+        android:fontFamily="@font/allegra"
         android:text="Wellcome, Emil!"
         android:textColor="@color/white"
         android:textSize="40sp"
@@ -55,7 +55,7 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alegra_font"
+        android:fontFamily="@font/allegra"
         android:text="How do you feel today?"
         android:textColor="@color/white70"
         android:textSize="22sp"
