it is working but not correctly

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
         tools:listitem="@layout/feeling_recycler_item" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/statseRecyclerView"
+        android:id="@+id/stateRecyclerView"
         android:layout_width="wrap_content"
         android:layout_height="366dp"
         android:layout_marginTop="27dp"
