--- a/app/src/main/res/layout/state_recycler_item.xml
+++ b/app/src/main/res/layout/state_recycler_item.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="22dp"
         android:fontFamily="@font/allegra"
-        android:text="Block header"
+        android:text="@string/block_header"
         android:textColor="@color/buttom"
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
         android:layout_width="150dp"
         android:layout_height="36dp"
         android:fontFamily="@font/allegra"
-        android:text="Brief description of the block with two lines"
+        android:text="@string/brief_description_of_the_block_with_two_lines"
         android:textColor="@color/buttom"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -41,7 +41,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/state_img01" />
+        app:srcCompat="@drawable/state_img01"
+        android:contentDescription="TODO" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button3"
