--- a/app/src/main/res/layout/feeling_recycler_item.xml
+++ b/app/src/main/res/layout/feeling_recycler_item.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/carattere_regular"
         android:text="Calm"
-        android:textColor="@color/black"
+        android:textColor="@color/white70"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
